# SoundWorks

./: .gitignore  .prettierignore  CODEGRAPH.md  CODE_REVIEW_2026-06-20.md  Cargo.toml  DESIGN_REVIEW_2026-06-20.md  README.md  package-lock.json  package.json
apps/desktop/: Cargo.toml  tauri.conf.json
apps/desktop/src/: lib.rs  main.rs
apps/web/: .prettierignore  eslint.config.js  index.html  package.json  vite.config.ts
apps/web/src/: App.test.tsx  App.tsx  accents.ts  appData.generated.json  appData.ts  main.tsx  sceneworks-ui-consumer.css  sceneworks-ui.d.ts  styles.css  tauri.ts  types.ts  (+1 more)
crates/soundworks-core/: Cargo.toml
crates/soundworks-core/src/: asset_library.rs  composition_editor.rs  composition_mixdown.rs  domain.rs  evaluation.rs  export_workflow.rs  fixtures.rs  lib.rs  loudness.rs  manifests.rs  model_manager.rs  mvp_validation.rs  project_library.rs  review.rs  rights.rs  runtime.rs  samples.rs  sfx.rs  songs.rs  storage.rs  studio_common.rs  tts.rs  ui_preferences.rs  video_to_audio.rs  voice_consent.rs  voice_lab.rs  web_fixtures.rs  workspace.rs
crates/soundworks-core/tests/: web_fixtures_parity.rs
docs/: architecture-baseline.md  asset-library.md  composition-editor.md  domain-contracts.md  export-workflow.md  implementation-plan.md  model-evaluation.md  model-manager.md  mvp-validation.md  product-parity-map.md  provider-manifests.md  requirements.md  rights-safety.md  runtime-packaging.md  samples-loops.md  sfx-studio.md  song-studio.md  tts-studio.md  video-to-audio.md  voice-lab.md  waveform-review.md  workspace-global-library.md
(+27 files in other folders)
