[workspace]
members = [
  "apps/desktop",
  "crates/soundworks-core",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/SceneWorks/SoundWorks"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
soundworks-core = { path = "crates/soundworks-core" }
tauri = "2"
tauri-build = "2"
tauri-plugin-opener = "2"
thiserror = "2"
