[package]
name = "soundworks-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kokoro-en = { version = "0.1.4", default-features = false, features = ["misaki-lean"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { version = "1", features = ["rt-multi-thread"] }
